--- a/CarFinder/Views/Shared/_Layout.cshtml
+++ b/CarFinder/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Cars by YMM", "CarsByYMM", "CarsByYMM")</li>
+                    <li>@Html.ActionLink("Car Search", "Index", "CarSearch")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
