--- a/CarFinder/Content/Site.css
+++ b/CarFinder/Content/Site.css
@@ -32,22 +32,37 @@ textarea {
 }
 
 .recall-img {
-    max-width:400px;
-    min-width:200px;
+    max-width:450px;
     border:2px solid #2e3534;
+    box-shadow: 5px 4px 9px 0px rgba(142, 142, 142, 1);
 }
 
 .car-info{
-
+    padding-bottom:16px;
 }
-.car-info label {
+
+.car-info label, .car-recall-info label {
     margin-right:6px;
-}
-
-.car-recall-info {
-
 }
 
 .car-recall-info label, .car-recall-info div {
     display:inline;
+}
+
+.car-recall-info {
+    padding:12px;
+}
+
+.tab-content {
+    border-left: 1px solid #dddddd;
+    border-right: 1px solid #dddddd;
+    border-bottom: 1px solid #dddddd;
+    border-bottom-left-radius:4px;
+    border-bottom-right-radius:4px;
+}
+
+.car-recall-info > .recall-field {
+    width:100%;
+    display:inline-block;
+    margin-bottom:5px;
 }
