--- a/CarFinder/Views/Shared/_Layout.cshtml
+++ b/CarFinder/Views/Shared/_Layout.cshtml
@@ -3,45 +3,75 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Car Finder</title>
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <link href="~/Content/skins.css" rel="stylesheet" />
     <link href="~/Content/DataTables-1.10.10/media/css/jquery.dataTables.min.css" rel="stylesheet" />
+    <link href="~/Content/essentials.css" rel="stylesheet" />
+    <link href="~/Content/stylesheet.css" rel="stylesheet" />
+    <link href="~/Content/myStyles.css" rel="stylesheet" />
+    
+    <link href="~/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+<body class="smoothscroll enable-animation">
+    <div id="wrapper">
+        <header header id="header-2" class="header">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="@Url.Action("Index","Home")">Payne<span>Solutions</span></a>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-ex1-collapse">
+                        <ul class="nav navbar-nav">
+                            <li class=" @(ViewBag.Menu == "Home" ? "active" : "")">@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li class=" @(ViewBag.Menu == "CarSearch" ? "active" : "")">@Html.ActionLink("Car Search", "Index", "CarSearch")</li>
+                        </ul>
+                        @*@Html.Partial("_LoginPartial")*@
+                    </div>
+                    @*<div class="row login-bar">
+                        <div class="col-md-offset-6 col-sm-6 col-xs-12 blogAccount">
+                            @Html.Partial("_LoginPartial")
+                        </div>
+                    </div>*@
+                </div>
+            </nav>
+        </header>
+
+            @RenderBody()
+
+        <footer id="footer-2" class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 footer-info-wrapper">
+                        <span>Copyright © PayneSolutions @System.DateTime.Now.ToString("yyyy")</span>
+                    </div>
+                    <!-- /.footer-info-wrapper -->
+                    <div class="col-xs-12 col-sm-6 social-link-wrapper">
+                        <ul class="social-links">
+                            <li><a href="https://www.facebook.com/brandon.payne.374" target="_blank"><i class="icon-facebook"></i></a></li>
+                            <li><a href="https://plus.google.com/u/0/+BPayne/posts" target="_blank"><i class="icon-google-plus"></i></a></li>
+                            <li><a href="https://github.com/99-ls1-ss" target="_blank"><i class="icon-github"></i></a></li>
+                        </ul>
+                    </div>
+                    <!-- /.social-link-wrapper -->
+                </div>
+                <!-- /.row -->
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Car Search", "Index", "CarSearch")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <!-- /.container -->
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    
+
     <script src="~/Scripts/DataTables-1.10.10/media/js/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/DataTables-1.10.10/extensions/Responsive/js/dataTables.responsive.min.js"></script>
 
