--- a/CarFinder/Views/CarSearch/Details.cshtml
+++ b/CarFinder/Views/CarSearch/Details.cshtml
@@ -15,18 +15,24 @@
     hp = hp * kwToHp;
     cid = cid * literToCid;
 
-    //if (Model.Recalls.Count > 0) {
-    //    int tab = 0; tab += (int)Model.Recalls.Count; tab++;
-    //}
-
 }
 
 <section class="section colored-wrapper">
     <div class="container">
         <div class="wrapper-2">
-            <h4><span>@Model.Car.make @Model.Car.model_name @Model.Car.model_trim</span></h4>
+            <div class="row">
+                <div class="col-md-9 content-wrapper">
+                    <h4><span>@Model.Car.make @Model.Car.model_name @Model.Car.model_trim</span></h4>
+                </div>
+                <div class="col-md-3 text-right">
+                    <a href="#" onclick="window.history.back()">Back to Car List</a>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper-2">
+            
             <div class="car-info row">
-                <div class="col-md-4">
+                <div class="col-xs-12 col-md-4">
                     <div><label>Year: </label>@Model.Car.model_year</div>
                     <div><label>Make:</label>@Model.Car.make</div>
                     <div><label>Model: </label>@Model.Car.model_name</div>
@@ -43,12 +49,10 @@
                         <div><label>Recall Count: </label>@Model.Recalls.Count</div>
                     }
                 </div>
-                <div class="col-md-8">
+                <div class="col-xs-12 col-md-8 text-center">
                     <div><img class="img-responsive recall-img" src="@Model.ImageUrl" /></div>
                 </div>
             </div>
-
-
 
             @if (Model.Recalls.Count > 0) {
                 <hr />
@@ -61,8 +65,6 @@
 
                     </ul>
                 </div>
-
-
                 <div class="tab-content">
                     @{var tabContent = 1; var first = "";}
                     @foreach (var recall in Model.Recalls.Results) {
