--- a/CarFinder/Views/CarSearch/Index.cshtml
+++ b/CarFinder/Views/CarSearch/Index.cshtml
@@ -24,26 +24,26 @@
             <form method="post" id="form" action="@Url.Action("Index","CarSearch")">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-md-3 inline-dropdown">
-                            <div>Years</div>
+                        <div class="col-xs-12 col-md-2 inline-dropdown">
+                            <div>Years</div><br />
                             @Html.DropDownList("year", null, htmlAttributes: new { @id = "yearList" })
                         </div>
 
                         @if (ViewBag.Make != null) {
                             <div class="col-xs-12 col-md-3 inline-dropdown">
-                                <div>Make</div>
+                                <div>Make</div><br />
                                 @Html.DropDownList("make", null, htmlAttributes: new { @id = "makeList" })
                             </div>
                 }
                         @if (ViewBag.Model != null) {
                             <div class="col-xs-12 col-md-3 inline-dropdown">
-                                <div>Model</div>
+                                <div>Model</div><br />
                                 @Html.DropDownList("model", null, htmlAttributes: new { @id = "modelList" })
                             </div>
                         }
                         @if (ViewBag.Trim != null) {
-                            <div class="col-xs-12 col-md-3 inline-dropdown">
-                                <div>Trim</div>
+                            <div class="col-xs-12 col-md-4 inline-dropdown">
+                                <div>Trim</div><br />
                                 @Html.DropDownList("trim", null, htmlAttributes: new { @id = "trimList" })
                             </div>
                         }
@@ -51,7 +51,7 @@
                 </div>
             </form>
 
-            <table id="carTable" class="carFinderTable">
+            <table id="carTable" class="carFinderTable table-responsive">
                 <thead>
                     <tr>
                         <th>@Html.DisplayNameFor(m => m.model_year)</th>
