Updated the CarSearch2 index page to not blow up

--- a/CarFinder/Views/CarSearch/Index.cshtml
+++ b/CarFinder/Views/CarSearch/Index.cshtml
@@ -76,7 +76,7 @@
                             </td>
                             <td>
                                 <a href="@Url.Action("Details", "CarSearch", new { id = car.id })">
-                                    @car.model_year
+                                    @car.model_name
                                 </a>
                             </td>
                             <td>
