Commented out unused code

--- a/CarFinder/Views/CarSearch/Details.cshtml
+++ b/CarFinder/Views/CarSearch/Details.cshtml
@@ -9,10 +9,10 @@
     float literToCid = float.Parse("0.0610237");
     float kwToHp = float.Parse("0.7457");
 
-    float hp = float.Parse(Model.Car.engine_power_ps);
+    //float hp = float.Parse(Model.Car.engine_power_ps);
     float cid = float.Parse(Model.Car.engine_cc);
 
-    hp = hp * kwToHp;
+    //hp = hp * kwToHp;
     cid = cid * literToCid;
 
 }
