--- a/CarFinder/Views/Home/Index.cshtml
+++ b/CarFinder/Views/Home/Index.cshtml
@@ -3,7 +3,18 @@
     ViewBag.Menu = "Home";
 }
 
-<div class="home-landing">
+@*<div class="home-landing img-responsive">
     <img src="~/Images/fbomb2.jpg" class="img-responsive" />
-</div>
+</div>*@
 
+<section class="section colored-wrapper">
+    <div class="container home-landing">
+        <div class="wrapper-2 landing-page img-responsive">
+            <div class="row">
+                <div class="carFinder-landing-bg-wrapper col-md-offset-3 col-md-6">
+                    <h2><span>Welcome to The Car Finder</span></h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
